fix word break on reviews components

--- a/react-app/src/components/RecipeDetails/RecipeDetails.css
+++ b/react-app/src/components/RecipeDetails/RecipeDetails.css
@@ -282,6 +282,9 @@
 }
 
 /* Individual Review */
+.review_wrapper * {
+    word-break: break-all;
+}
 
 .review_wrapper {
     display: flex;
